fix: button gap

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -41,4 +41,7 @@
     border-radius: 0.5rem;
     display: flex;
     align-items: center;
+    gap: 0.375rem;
+    font-weight: 700;
+    font-size: 0.875rem;
 }
